{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 347,
  "lineage": "f88743e8-0e14-3a09-aac1-ec2a84015335",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:534711626568:subnet/subnet-039c25ba54d8d2280",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "availability-zone",
                "values": [
                  "us-east-2a"
                ]
              }
            ],
            "id": "subnet-039c25ba54d8d2280",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "534711626568",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0c590bc0d42aa28ae"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:534711626568:vpc/vpc-0c590bc0d42aa28ae",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-061398f134621dbfe",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0b3d544ad109a1e87",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c590bc0d42aa28ae",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-068cbddb06c88029a",
            "owner_id": "534711626568"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lucidlink",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0884d2865dbe9de4b",
            "arn": "arn:aws:ec2:us-east-2:534711626568:instance/i-0b290b057abc98e63",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 3000,
                "throughput": 500,
                "volume_id": "vol-0d7b89bcd8ca9504f",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b290b057abc98e63",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "us-east-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a07607869eb26de3",
            "private_dns": "ip-172-31-17-127.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.17.127",
            "public_dns": "ec2-3-17-163-210.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.163.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 500,
                "volume_id": "vol-0f452c802deb0ea4e",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0174fc3099ae5d4d2",
            "tags": {
              "Name": "LucidLink-Instance"
            },
            "tags_all": {
              "Name": "LucidLink-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0f4a44d0435c4b5fd"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:534711626568:internet-gateway/igw-0968c374f8f7e7c46",
            "id": "igw-0968c374f8f7e7c46",
            "owner_id": "534711626568",
            "tags": {
              "Name": "LucidLink-IGW"
            },
            "tags_all": {
              "Name": "LucidLink-IGW"
            },
            "vpc_id": "vpc-06dff69a94a84db5b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:534711626568:route-table/rtb-02ccd826f46b4be21",
            "id": "rtb-02ccd826f46b4be21",
            "owner_id": "534711626568",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0968c374f8f7e7c46",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "LucidLink-RT"
            },
            "tags_all": {
              "Name": "LucidLink-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06dff69a94a84db5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0896edcd3b0299cfc",
            "route_table_id": "rtb-02ccd826f46b4be21",
            "subnet_id": "subnet-04d5d34d906c151f2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:534711626568:security-group/sg-030c4f9aa3a816ff4",
            "description": "Security group for EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030c4f9aa3a816ff4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "Allow all traffic from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "instance-0c1850aa491aae9d",
            "name_prefix": "",
            "owner_id": "534711626568",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "LucidLink",
              "ManagedBy": "terraform",
              "Service": "production-dpfs"
            },
            "tags_all": {
              "Application": "LucidLink",
              "ManagedBy": "terraform",
              "Service": "production-dpfs"
            },
            "timeouts": null,
            "vpc_id": "vpc-06dff69a94a84db5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "random_id.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:534711626568:security-group/sg-07e2125dd89e364aa",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07e2125dd89e364aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250112181014330300000002",
            "name_prefix": "terraform-",
            "owner_id": "534711626568",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LucidLink-SG"
            },
            "tags_all": {
              "Name": "LucidLink-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06dff69a94a84db5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:534711626568:security-group/sg-0eb3dbf9c495eb592",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb3dbf9c495eb592",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "vpc-endpoints-0c1850aa491aae9d",
            "name_prefix": "",
            "owner_id": "534711626568",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LucidLink-Endpoints-SG"
            },
            "tags_all": {
              "Name": "LucidLink-Endpoints-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06dff69a94a84db5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "random_id.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:534711626568:subnet/subnet-04d5d34d906c151f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d5d34d906c151f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "534711626568",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "LucidLink-Subnet"
            },
            "tags_all": {
              "Name": "LucidLink-Subnet"
            },
            "vpc_id": "vpc-06dff69a94a84db5b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:534711626568:vpc/vpc-06dff69a94a84db5b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0724e49b042d70ecd",
            "default_route_table_id": "rtb-0e7cd58589a3aab07",
            "default_security_group_id": "sg-0b30deb1ce7c253f3",
            "dhcp_options_id": "dopt-0b3d544ad109a1e87",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06dff69a94a84db5b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e7cd58589a3aab07",
            "owner_id": "534711626568",
            "tags": {
              "Name": "LucidLink-VPC"
            },
            "tags_all": {
              "Name": "LucidLink-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:534711626568:vpc-endpoint/vpce-05a0f4fbc2c88d185",
            "dns_entry": [
              {
                "dns_name": "vpce-05a0f4fbc2c88d185-hfznqh6a.ec2messages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-05a0f4fbc2c88d185-hfznqh6a-us-east-2a.ec2messages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "ec2messages.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z08045461OWNGCOXGGLQ0"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05a0f4fbc2c88d185",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03db216dbdea1acd9"
            ],
            "owner_id": "534711626568",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-07e2125dd89e364aa"
            ],
            "service_name": "com.amazonaws.us-east-2.ec2messages",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.0.22",
                "subnet_id": "subnet-04d5d34d906c151f2"
              }
            ],
            "subnet_ids": [
              "subnet-04d5d34d906c151f2"
            ],
            "tags": {
              "Name": "LucidLink-EC2Messages-Endpoint"
            },
            "tags_all": {
              "Name": "LucidLink-EC2Messages-Endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06dff69a94a84db5b"
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:534711626568:vpc-endpoint/vpce-08e876460311b65c1",
            "cidr_blocks": [
              "18.34.252.0/22",
              "52.219.141.0/24",
              "18.34.72.0/21",
              "52.219.96.0/20",
              "52.219.224.0/21",
              "16.12.60.0/22",
              "52.219.232.0/22",
              "52.219.80.0/20",
              "3.5.128.0/22",
              "52.219.142.0/23",
              "3.5.132.0/23",
              "16.12.64.0/22",
              "52.219.212.0/22",
              "52.219.176.0/22"
            ],
            "id": "vpce-08e876460311b65c1",
            "owner_id": "534711626568",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ba54012",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-02ccd826f46b4be21"
            ],
            "service_name": "com.amazonaws.us-east-2.s3",
            "state": "available",
            "tags": {
              "Name": "LucidLink-S3-Endpoint"
            },
            "tags_all": {
              "Name": "LucidLink-S3-Endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-06dff69a94a84db5b"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:534711626568:vpc-endpoint/vpce-06cc1d83323ad78a7",
            "dns_entry": [
              {
                "dns_name": "vpce-06cc1d83323ad78a7-wtb5qw1u.ssm.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-06cc1d83323ad78a7-wtb5qw1u-us-east-2a.ssm.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "ssm.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z084254156EWA3202LAG"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06cc1d83323ad78a7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0ba6a3cd7021dd24f"
            ],
            "owner_id": "534711626568",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-07e2125dd89e364aa"
            ],
            "service_name": "com.amazonaws.us-east-2.ssm",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.0.21",
                "subnet_id": "subnet-04d5d34d906c151f2"
              }
            ],
            "subnet_ids": [
              "subnet-04d5d34d906c151f2"
            ],
            "tags": {
              "Name": "LucidLink-SSM-Endpoint"
            },
            "tags_all": {
              "Name": "LucidLink-SSM-Endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06dff69a94a84db5b"
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:534711626568:vpc-endpoint/vpce-002c997e8848b43d0",
            "dns_entry": [
              {
                "dns_name": "vpce-002c997e8848b43d0-wep0vjm7.ssmmessages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-002c997e8848b43d0-wep0vjm7-us-east-2a.ssmmessages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "ssmmessages.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z02007192IVZYDSZNIA0M"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-002c997e8848b43d0",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0d4647ac8a7ea2776"
            ],
            "owner_id": "534711626568",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-07e2125dd89e364aa"
            ],
            "service_name": "com.amazonaws.us-east-2.ssmmessages",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.0.25",
                "subnet_id": "subnet-04d5d34d906c151f2"
              }
            ],
            "subnet_ids": [
              "subnet-04d5d34d906c151f2"
            ],
            "tags": {
              "Name": "LucidLink-SSMMessages-Endpoint"
            },
            "tags_all": {
              "Name": "LucidLink-SSMMessages-Endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06dff69a94a84db5b"
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    }
  ]
}